--- a/client/styles/_main.scss
+++ b/client/styles/_main.scss
@@ -1,4 +1,2 @@
 @import './base';
-@import './components/dashboard';
-@import './components/login';
-@import './components/big-calendar.scss'
+@import './scss/creative';
